objects/ECog_12__c.object
<CustomObject>
    <fields>
        <fullName>Anticipating_weather_change_and_planning__c</fullName>
        <label>ECog-12_v1.0.7</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communicating_ideas_in_conversation__c</fullName>
        <label>ECog-12_v1.0.3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ECog&apos;s-12</relationshipLabel>
        <relationshipName>ECog_s_12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Difficulty_calc_distances_when_driving__c</fullName>
        <label>ECog-12_v1.0.5</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doing_two_things_at_once__c</fullName>
        <label>ECog-12_v1.0.11</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finding_your_way_around_a_familiar_home__c</fullName>
        <label>ECog-12_v1.0.6</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keeping_living_and_workspace_organised__c</fullName>
        <label>ECog-12_v1.0.9</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_bill_payments__c</fullName>
        <label>ECog-12_v1.0.10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_trip_vacation_outing__c</fullName>
        <label>ECog-12_v1.0.8</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remember_current_date_or_day_of_the_week__c</fullName>
        <label>ECog-12_v1.0.2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remember_where_you_placed_personal_items__c</fullName>
        <label>ECog-12_v1.0.1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Understanding_spoken_directions__c</fullName>
        <label>ECog-12_v1.0.4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_on_a_task_talk_to_someone_sametime__c</fullName>
        <label>ECog-12_v1.0.12</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>ECog-12</label>
    <nameField>
        <displayFormat>ECog-12-{0000000000}</displayFormat>
        <label>ECog-12 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ECog&apos;s-12</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>